--- a/reversi-server/package.json
+++ b/reversi-server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "http": "^0.0.1-security",
+    "ioredis": "^5.4.1",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
