--- a/reversi-server/package.json
+++ b/reversi-server/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "db:migrate": "knex migrate:latest --knexfile ./database/knexfile.js",
+    "db:create": "knex migrate:make $TABLE --knexfile ./database/knexfile.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +16,8 @@
     "express": "^4.19.2",
     "http": "^0.0.1-security",
     "ioredis": "^5.4.1",
+    "knex": "^3.1.0",
+    "mysql2": "^3.10.3",
     "socket.io": "^4.7.5",
     "winston": "^3.13.1"
   },
