Update: Implement Google SSO and enhance app structure - Add Google SSO authentication flow - Implement stateless JWT authentication system - Create ProtectedRoute component for secure routing - Update App component with language handling and protected routes - Implement Redux store for configuration management - Enhance user model with Knex query builder - Create auth service for user creation and update

--- a/reversi-app/public/config/config-production.json
+++ b/reversi-app/public/config/config-production.json
@@ -1,3 +1,4 @@
 {
-  "GOOGLE_SSO_CLIENT_ID": "1079399845150-37jdjt04eu3lang7p4casg6k9tcrdbpr.apps.googleusercontent.com"
+  "GOOGLE_SSO_CLIENT_ID": "1079399845150-37jdjt04eu3lang7p4casg6k9tcrdbpr.apps.googleusercontent.com",
+  "SERVER_URL": "http://localhost:3000"
 }
