--- a/reversi-server/package.json
+++ b/reversi-server/package.json
@@ -16,6 +16,7 @@
     "express": "^4.19.2",
     "http": "^0.0.1-security",
     "ioredis": "^5.4.1",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "mysql2": "^3.10.3",
     "socket.io": "^4.7.5",
